[gd_scene load_steps=18 format=2]

[ext_resource path="res://levels/MapUI.gd" type="Script" id=1]
[ext_resource path="res://assets/Map.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Peter Marker.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/hub/map.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.890196, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=2]
size = 256
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MapSprite/Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "click"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("MapSprite/Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="MapUI" type="Node2D"]
script = ExtResource( 1 )

[node name="HubMapButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.756863 )
margin_left = 1427.0
margin_top = 56.0
margin_right = 1887.0
margin_bottom = 386.0
rect_scale = Vector2( 0.832514, 0.832514 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 4 )
toggle_mode = true
pressed = true
icon = ExtResource( 5 )
expand_icon = true

[node name="MapSprite" type="Sprite" parent="."]
position = Vector2( 0, 1100 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="MapSprite"]
margin_left = 1748.0
margin_top = 3.75
margin_right = 1850.0
margin_bottom = 253.75
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "x"

[node name="Label2" type="Label" parent="MapSprite/Label"]
margin_left = -27.0
margin_right = 75.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 2 )
text = "x"

[node name="ExitMapButton" type="Button" parent="MapSprite"]
margin_left = 1636.0
margin_top = 3.75
margin_right = 1921.0
margin_bottom = 301.75
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 15 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 16 )
anims/click = SubResource( 17 )

[connection signal="pressed" from="HubMapButton" to="." method="_on_HubMapButton_pressed"]
[connection signal="pressed" from="MapSprite/ExitMapButton" to="." method="_on_ExitMapButton_pressed"]
